--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new.html
@@ -1,4 +1,4 @@
-<!--@subject {{var store.getFrontendName()}} -  Creditnota # {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
+<!--@subject {{var store.getFrontendName()}} -  Creditnota {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
 
 <style type="text/css">
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
@@ -61,9 +61,9 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p>
                                                                 <strong>Beste {{var order.getCustomerName()}}</strong>,<br/>
-                                                                Bedankt voor je bestelling op {{var order.getStoreGroupName()}}.
-                                                                Je kan de status van je bestelling controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.
-                                                                Indien je vragen hebt, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45.</span></p>
+                                                                Hierbij de creditnota van je bestelling op {{var order.getStoreGroupName()}}.</p>
+                                                            <p> Je kan de status van je bestelling controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.</p>
+                                                            <p> Indien je vragen hebt, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45.</span></p>
                                                             <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">
                                                                 Je creditnota {{var creditmemo.increment_id}} voor bestelling {{var order.increment_id}}
                                                             </h3>
