--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Creditnota # {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
+<!--@subject {{var order.getStoreGroupName()}}: Creditnota {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
 
 <style type="text/css">
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
