--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_update.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_update.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Creditnota # {{var creditmemo.increment_id}} update @-->
+<!--@subject {{var order.getStoreGroupName()}}: Creditnota {{var creditmemo.increment_id}} update @-->
 
 <html>
 <body style="padding: 0 0; margin: 0 0">
