--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_update_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_update_guest.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Creditnota # {{var creditmemo.increment_id}} update @-->
+<!--@subject {{var order.getStoreGroupName()}}: Creditnota {{var creditmemo.increment_id}} update @-->
 <style type="text/css">body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }</style>
 
 
