--- a/KoketSite/app/design/frontend/shopper/default/template/catalog/product/compare/list.phtml
+++ b/KoketSite/app/design/frontend/shopper/default/template/catalog/product/compare/list.phtml
@@ -65,7 +65,8 @@
                     <?php echo $this->getReviewsSummaryHtml($_item, 'short') ?>
                     <?php echo $this->getPriceHtml($_item, true, '-compare-list-top') ?>
                     <?php if($_item->isSaleable()): ?>
-                        <p><button type="button" title="<?php echo $this->__('Add to Cart') ?>" class="button btn-cart" onclick="setPLocation('<?php echo $this->helper('catalog/product_compare')->getAddToCartUrl($_item) ?>', true)"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button></p>
+<!--                          GERT: remove upper btn, because the below btn is aligned-->
+<!--                        <p><button type="button" title="--><?php //echo $this->__('Add to Cart') ?><!--" class="button btn-cart" onclick="addToBasket('--><?php //echo $this->helper('catalog/product_compare')->getAddToCartUrl($_item) ?><!--')"><span><span>--><?php //echo $this->__('Add to Cart') ?><!--</span></span></button></p>-->
                     <?php else: ?>
                         <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                     <?php endif; ?>
@@ -118,7 +119,8 @@
                 <td>
                     <?php echo $this->getPriceHtml($_item, true, '-compare-list-bottom') ?>
                     <?php if($_item->isSaleable()): ?>
-                        <p><button type="button" title="<?php echo $this->__('Add to Cart') ?>" class="button btn-cart" onclick="setPLocation('<?php echo $this->helper('catalog/product_compare')->getAddToCartUrl($_item) ?>', true)"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button></p>
+                        <!--  GERT: use ajax-->
+                        <p><button type="button" title="<?php echo $this->__('Add to Cart') ?>" class="button btn-cart" onclick="addToBasket('<?php echo $this->helper('catalog/product_compare')->getAddToCartUrl($_item) ?>')"><span><span><?php echo $this->__('Add to Cart') ?></span></span></button></p>
                     <?php else: ?>
                         <p class="availability out-of-stock"><span><?php echo $this->__('Out of stock') ?></span></p>
                     <?php endif; ?>
@@ -156,6 +158,20 @@
                 }
             });
         }
+
+        //GERT: added this function
+        function addToBasket(url)
+        {
+            new Ajax.Request(url, {
+                parameters: {isAjax: 1, method: 'POST'},
+                onLoading: function(){$('compare-list-please-wait').show();},
+                onSuccess: function(transport) {
+                    $('compare-list-please-wait').hide();
+                    window.opener.location.reload();
+                }
+            });
+        }
+
     </script>
 <?php else: ?>
 	<h3 align="center"><?php echo $this->__('Please select products to compare') ?></h3>
